--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-
 .clear{
     clear: both;
 }
@@ -9,27 +8,26 @@
 
 .success_message{
     color: green;
-}
+}   
 
 .block_for_messages{
     text-align: center;
-}
+}  
 
 #header, #footer{
     border: 2px solid #000;
-}
+}    
 
 #header{
     padding-left: 10px;
 }
-
+    /*
 #footer{
     position: absolute;
-    /*bottom: 0;*/
+    bottom: 0;
     right: 0;
-    left: 0;
     width: 100%;
-}
+}         */
 
 #header h2, #footer h2{
     text-align: center;
@@ -37,13 +35,14 @@
 }
 
 #auth_block{
-    width: 290px;
-    float: right;
+    width: 290px;  
+    float: left;    
 }
 
 #auth_block a{
-    display: inline;   
-    float: right;    /*         */
+
+    display: table;     
+   // float: left;    /*         */
     padding: 10px;
     border-radius: 10px;
     color: #fff;  /**/
@@ -64,17 +63,17 @@
     float: right;
 }         */
 
-#link_register a, #link_info a{
+#link_register a, #link_info a{  
     background: #54d854; 
     text-align: center;
 }
 
-#link_auth a, #link_logout a{
+#link_auth a, #link_logout a, #person_area a, #main a{  
     background: #4e4eec;
     text-align: center;
 }
 
-/* Блок с формой регистрации */
+
 #form_register, #form_auth{
     width: 300px;
     margin: 0 auto;
@@ -83,4 +82,19 @@
 
 #authorized h2{
     text-align: center;
+}
+
+
+/* FOOTER */
+#footer { 
+    text-align: center;
+    background: #419bc4;
+    position: relative;
+    left: 0; bottom: 0;
+    width: 100%;     
+}
+
+#footer p {
+    margin: 0;
+    color: #fff;    
 }
